--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node ./generateVapidKeys.js && next dev --experimental-https",
+    "dev": "node ./generateVapidKeys.js && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
